fix(Tinebase): Fix the tine scrollbar edition
Reviewed-on: http://gerrit.tine20.com/customers/12893
Tested-by: Philipp Schüle <p.schuele@metaways.de>

--- a/tine20/Tinebase/css/ux/display/DisplayPanel.css
+++ b/tine20/Tinebase/css/ux/display/DisplayPanel.css
@@ -92,10 +92,6 @@
     /*background-image:url(../../../../themes/tine20/resources/images/tine20/form/text-bg.gif);*/
 /*}*/
 
-.x-form-display-field {
-    overflow: scroll;
-}
-
 .x-ux-displayfield-text {
     background-image: none;
 }
